# CProgramming

./: CMakeLists.txt  Readme.md
C1/: CMakeLists.txt
C1/1-1/: CMakeLists.txt  hello_world.cc
C1/1-10/: CMakeLists.txt  visible_symbol.cc
C1/1-11/: CMakeLists.txt  word_count.cc
C1/1-12/: CMakeLists.txt  one_word_per_line.cc
C1/1-13/: CMakeLists.txt  len_histogram.cc  len_histogram_v.cc
C1/1-14/: CMakeLists.txt  freq_histogram.cc
C1/1-15/: CMakeLists.txt  f_to_c_function.cc
C1/1-15/include/: f_to_c.h
C1/1-15/src/: f_to_c.cc
C1/1-16/: CMakeLists.txt  print_len_and_text.cc
C1/1-16/include/: printline.h
C1/1-17/: CMakeLists.txt  print_len_lt_80.cc
C1/1-18/: CMakeLists.txt  print_no_trailing_space.cc  remove_trailing_space.cc  remove_trailing_space.h
C1/1-18/src/: getline.cc  remove_trailing_space.cc
C1/1-19/: CMakeLists.txt  print_reverse.cc  reverseline.cc  reverseline.h
C1/1-19/src/: printline.cc  reverseline.cc
C1/1-2/: CMakeLists.txt  hello_world.cc
C1/1-20/: CMakeLists.txt  detab.cc  getline.cc
C1/1-20/src/: getline.cc
C1/1-21/: CMakeLists.txt  entab.cc  getline.cc  getline.h  printline.cc
C1/1-21/src/: getline.cc
C1/1-22/: CMakeLists.txt  foldline.cc
C1/1-23/: CMakeLists.txt  remove_comments.cc
C1/1-24/: CMakeLists.txt  valid_rudimentary.cc
C1/1-3/: CMakeLists.txt  heading.cc
C1/1-4/: CMakeLists.txt  c_to_f.cc
C1/1-5/: CMakeLists.txt  temp_reverse.cc
C1/1-6/: CMakeLists.txt  EOF.cc
C1/1-7/: CMakeLists.txt  print_EOF.cc
C1/1-8/: CMakeLists.txt  count_blank_tab_newline.cc
C1/1-9/: CMakeLists.txt  truncate_blank.cc
C2/: CMakeLists.txt
C2/2-1/: CMakeLists.txt  range_of_basic_type.cc
C2/2-10/: lower.cc  lower.h
C2/2-2/: CMakeLists.txt  equivalent_loop.cc
C2/2-3/: CMakeLists.txt  htoi.cc  htoi.h
C2/2-4/: squeeze.cc  squeeze.h
C2/2-5/: any.cc  any.h
C2/2-6/: setbits.cc  setbits.h
C2/2-7/: invert.cc  invert.h
C2/2-8/: rightrot.cc  rightrot.h
C2/2-9/: bitcount.cc  bitcount.h
C3/3-1/: binsearch.cc
C3/3-2/: escape.cc  escape.h
C3/3-3/: expand.cc  expand.h
C3/3-4/: itoa.cc  itoa.h
C3/3-5/: itob.cc  itob.h
C3/3-6/: itoa_width.cc  itoa_width.h
C4/: CMakeLists.txt
C4/4-1/: strrindex.cc  strrindex.h
C4/4-10/: CMakeLists.txt  calculator.cc  config.h  getop.cc
C4/4-11/: CMakeLists.txt  calculator.cc  getop.cc  stream_op.cc
C4/4-12/: itoa_recursive.cc  itoa_recursive.h
C4/4-13/: reverse_recursive.cc  reverse_recursive.h
C4/4-14/: swap_macro.h
C4/4-2/: atof.cc
C4/4-3/: CMakeLists.txt  calculator.cc  getop.cc
C4/4-4/: CMakeLists.txt  calculator.cc  getop.cc
C4/4-5/: CMakeLists.txt  calculator.cc  double_stack.cc  getop.cc
C4/4-6/: CMakeLists.txt  calculator.cc  double_stack.cc
C4/4-7/: CMakeLists.txt  stream_op.cc  test_entire_string.cc
C4/4-8/: CMakeLists.txt  stream_op.cc  test_single_char.cc
C4/4-9/: CMakeLists.txt  stream_op.cc  test_handle_EOF.cc
C5/: CMakeLists.txt
C5/5-1/: CMakeLists.txt  getint.cc  getint_main.cc
C5/5-10/: CMakeLists.txt  expr.cc
C5/5-11/: CMakeLists.txt  detab_args.cc  entab_args.cc
C5/5-12/: CMakeLists.txt  entab_mn.cc
C5/5-13/: CMakeLists.txt  tail.cc
C5/5-14/: CMakeLists.txt  sort_nr.cc
C5/5-15/: CMakeLists.txt  sort_nrf.cc
C5/5-16/: CMakeLists.txt  sort_nrfd.cc
C5/5-17/: CMakeLists.txt  sort_nrfd_range.cc
C5/5-18/: CMakeLists.txt  dcl_error.cc
C5/5-19/: CMakeLists.txt  undcl.cc
C5/5-2/: CMakeLists.txt  getfloat.cc  getfloat_main.cc
C5/5-20/: CMakeLists.txt  dcl_expand.cc  gettoken.cc  parmdcl.cc
C5/5-3/: strcat_p.cc  strcat_p.h
C5/5-4/: strend.cc  strend.h
C5/5-5/: str_op.cc  str_op.h
C5/5-6/: CMakeLists.txt  atoi_p.cc  atoi_p.h  getline_p.cc  getline_p.h  getop_p.cc  getop_p.h  itoa_p.cc  itoa_p.h  itoa_width_p.cc  itoa_width_p.h  itob_p.cc  itob_p.h  reverse_p.cc  reverse_p.h  strindex_p.cc  strindex_p.h  test_getline_p.cc  test_getop_p.cc
C5/5-7/: CMakeLists.txt  readlines.cc  readlines.h  test_readlines.cc
C5/5-8/: year_month_day_conversion.cc  year_month_day_conversion.h
C5/5-9/: year_month_day_conversion_p.cc  year_month_day_conversion_p.h
C6/: CMakeLists.txt
C6/6-1/: CMakeLists.txt  wordCount.cc
C6/6-2/: CMakeLists.txt  countSamePrefix.cc
C6/6-3/: CMakeLists.txt  word_line_count.cc
C6/6-4/: CMakeLists.txt  word_frequency.cc
C6/6-5/: undef.cc  undef.h
C7/: CMakeLists.txt
C8/: CMakeLists.txt
C8/8-2/: CMakeLists.txt  _fillbuf_code_size.sh  _fillbuf_regular.cc  _fillbuf_regular.h  _fillbuf_regular_run.cc  _fillbuf_rewrite.cc  _fillbuf_rewrite.h  _fillbuf_rewrite_run.cc  test_exec_speed_regular.cc  test_exec_speed_rewrite.cc
test/: C2_test.hpp  C3_test.hpp  C4_test.hpp  C5_test.hpp  C6_test.hpp  C7_test.hpp  C8_test.hpp  CMakeLists.txt  test_all.cpp
test/resources/: code0  code1  fileb1  filec0  filec1  medium_size_file_copy_2
util/: memory_op.cc  util.cc  util.h
(+47 files in other folders)
